# bakalarka-gtfs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_map.py  zAko.txt
agent_gtfs/agent/: agent_s_mcp.py  cenotvorba.py  systemove_instrukcie.py
agent_gtfs/api/: api_server.py
agent_gtfs/konfiguracia/: nastavenia.py
config/librechat/: librechat.yaml
data/gtfs_latest/: Tarifni_zony.txt  agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  levels.txt  pathways.txt  routes.txt  shapes.txt  stops.txt  trips.txt
docs/plany/: implementacny-plan.md
experiments/exp_01/: zadanie.md
experiments/exp_02/: zhodnotenie.md
experiments/exp_03/: vysledok.md  zadanie.md  zhodnotenie.md
experiments/exp_04/: vysledok.md  zhodnotenie.md
experiments/exp_05/: zhodnotenie.md
experiments/exp_06/: vysledok.md  zadanie.md  zhodnotenie.md
experiments/exp_07/: zadanie.md  zhodnotenie.md
experiments/exp_08/: vysledok.md
experiments/exp_09/: vysledok.md  zadanie.md
experiments/exp_10/: zadanie.md  zhodnotenie.md
experimenty/: README.md
experimenty/exp_01/: vysledok.md  zhodnotenie.md
experimenty/exp_02/: pred_po_vylepsenie.md  vysledok.md  zadanie.md  zhodnotenie.md
experimenty/exp_03/: zadanie.md
experimenty/exp_04/: zadanie.md
experimenty/exp_05/: vysledok.md  zadanie.md
experimenty/exp_06/: vysledok.md  zadanie.md
experimenty/exp_07/: vysledok.md  zadanie.md
experimenty/exp_08/: zadanie.md  zhodnotenie.md
experimenty/exp_09/: zadanie.md  zhodnotenie.md
experimenty/exp_10/: vysledok.md  zadanie.md  zhodnotenie.md
konfiguracia/librechat/: librechat.yaml
server_mcp_gtfs/databaza/: databaza.py
server_mcp_gtfs/patchovanie/: operacie_patchu.py  validacia.py
server_mcp_gtfs/server/: server_tools.py
server_mcp_gtfs/vizualizacia/: map_template.py
src/bakalarka_gtfs/: __init__.py
src/bakalarka_gtfs/agent/: __init__.py  agent.py  hooks.py  models.py  pricing.py  prompts.py
src/bakalarka_gtfs/api/: __init__.py  __main__.py  auth.py  chat.py  formatting.py  schemas.py  server.py
src/bakalarka_gtfs/core/: __init__.py  config.py
src/bakalarka_gtfs/mcp/: __init__.py  __main__.py  database.py  server.py
src/bakalarka_gtfs/mcp/patching/: __init__.py  apply.py  diff.py  models.py  operations.py  sql_builder.py  transforms.py  validation.py
src/bakalarka_gtfs/mcp/visualization/: __init__.py  map_template.py
tests/: test_patch_complex_filters.py  test_patch_workflow_confirm_hash.py  test_roundtrip_export.py  test_validation_full_scan.py
