[project]
name = "bakalarka-gtfs-agent"
version = "0.3.0"
description = "MCP server a custom GTFS agent pre bakalarsku pracu"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
gtfs-mcp = "server_mcp_gtfs.server.server_tools:main"
gtfs-api = "agent_gtfs.api.api_server:main"

[tool.hatch.build.targets.wheel]
packages = ["server_mcp_gtfs", "agent_gtfs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
